--- a/index.html
+++ b/index.html
@@ -1,16 +1,239 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROJECT grafkom</title>
     <style>
-        body{
+        body {
             margin: 0;
         }
     </style>
 </head>
+
 <body>
-    <script type="module" src="./index.js"></script>
+    <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+    <script type="importmap">
+    {
+        "imports": {
+            "three": "https://unpkg.com/three@0.153.0/build/three.module.js",
+            "three/addons/": "https://unpkg.com/three@0.153.0/examples/jsm/"
+        }
+    }
+    </script>
+    <script type="module">
+        // utils
+        function getBoundaryHWD(object) {
+            var boundingBox = new THREE.Box3().setFromObject(object);
+            var size = new THREE.Vector3();
+            boundingBox.getSize(size);
+
+            // Mendapatkan tinggi, lebar, dan kedalaman
+            var height = size.y;
+            var width = size.x;
+            var depth = size.z;
+
+            return { height, width, depth };
+        }
+        function getCenterOBJ(object) {
+            var boundingBox = new THREE.Box3().setFromObject(object);
+
+            var center = new THREE.Vector3();
+            boundingBox.getCenter(center);
+
+            return { ...center }
+        }
+
+        import * as THREE from 'three';
+        import { GLTFLoader } from 'three/examples/jsm/loaders/GLTFLoader.js';
+        import { Octree } from 'three/addons/math/Octree.js';
+        import { Capsule } from 'three/addons/math/Capsule.js';
+        import { PointerLockControls } from 'three/examples/jsm/controls/PointerLockControls.js';
+
+
+        // INITIAL SETUP
+        const scene = new THREE.Scene();
+        const camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 0.1, 1000);
+        camera.position.set(0, 0, 0);
+        camera.rotation.order = 'YXZ';
+        const loader = new GLTFLoader();
+        const clock = new THREE.Clock();
+        const textureLoader = new THREE.TextureLoader();
+
+
+        const GRAVITY = 30;
+        const STEPS_PER_FRAME = 5;
+        // player collider
+        const worldOctree = new Octree();
+        const playerCollider = new Capsule(new THREE.Vector3(0, 0.05, 0), new THREE.Vector3(0, 10, 0), 0.35);
+        const playerVelocity = new THREE.Vector3();
+        const playerDirection = new THREE.Vector3();
+
+        let playerOnFloor = false;
+
+        const renderer = new THREE.WebGLRenderer();
+        renderer.setClearColor(0xFFFFFF);
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        document.body.appendChild(renderer.domElement);
+
+        const control = new PointerLockControls(camera, renderer.domElement)
+
+        // LIGHTING
+        const ambientLight = new THREE.AmbientLight(0xFFFFFF, 0.5, 10, 2);
+        scene.add(ambientLight);
+
+        const directionalLight = new THREE.DirectionalLight(0xffffff, 0.5); // Warna putih dengan intensitas 0.5
+        directionalLight.position.set(-50, 100, 20);
+        scene.add(directionalLight);
+
+        const plight = new THREE.PointLight(0xffffff, 1000); // Warna putih dengan intensitas 0.5
+        plight.position.set(-30, 15, -100);
+        scene.add(plight);
+
+        const geometry = new THREE.BoxGeometry(1,1,1);
+        const material = new THREE.MeshPhongMaterial({ color: 0x00ff00 }); // Gunakan material yang merespons terhadap pencahayaan
+        const cube = new THREE.Mesh(geometry, material);
+        cube.position.set(-30,15,-95)
+        scene.add(cube);
+
+        // EVENT HANDLING
+        let keyboard = {};
+        document.addEventListener('keydown', function (event) {
+            keyboard[event.key] = true;
+        });
+        document.addEventListener('keyup', function (event) {
+            keyboard[event.key] = false;
+        });
+
+
+
+        // movement handling
+        function controls(deltaTime) {
+            const speedDelta = deltaTime * (playerOnFloor ? 20 : 5) + 0.1;
+            if (keyboard['W'] || keyboard['w']) {
+                playerVelocity.add(getForwardVector().multiplyScalar(speedDelta));
+            }
+            if (keyboard['a'] || keyboard['A']) {
+                playerVelocity.add(getSideVector().multiplyScalar(- speedDelta));
+            }
+            if (keyboard['s'] || keyboard['S']) {
+                playerVelocity.add(getForwardVector().multiplyScalar(- speedDelta));
+            }
+            if (keyboard['d'] || keyboard['D']) {
+                playerVelocity.add(getSideVector().multiplyScalar(speedDelta));
+            }
+            if (playerOnFloor) {
+                if (keyboard['v']) {
+                    playerVelocity.y = 15;
+                }
+            }
+        }
+
+
+        // LOAD MODELS
+        let alas, rumah;
+        async function loadModels() {
+            try {
+                // load alas
+                const textureAlas = textureLoader.load("./public/grass.jpg");
+                textureAlas.wrapS = THREE.RepeatWrapping;
+                textureAlas.wrapT = THREE.RepeatWrapping;
+                textureAlas.repeat.set(10, 10);
+                const alas_geometry = new THREE.BoxGeometry(200, 1, 200);
+                const alas_material = new THREE.MeshStandardMaterial({ map: textureAlas });
+                alas = new THREE.Mesh(alas_geometry, alas_material);
+                alas.position.set(0, 0, 0);
+                scene.add(alas);
+                worldOctree.fromGraphNode(alas);
+
+                // load rumah
+                const ruanganPromise = new Promise((resolve, reject) => {
+                    loader.load('./public/rumahtanpapintu.glb', function (gltf) {
+                        rumah = gltf.scene;
+                        rumah.scale.set(10, 10, 10)
+                        rumah.position.set(0, 0, 0);
+
+                        rumah.traverse(function (child) {
+                            if (child.isMesh) {
+                                child.castShadow = true; // Enable shadow casting
+                                child.receiveShadow = true; // Enable shadow receiving
+                            }
+                        });
+
+                        scene.add(rumah);
+                        worldOctree.fromGraphNode(rumah);
+                        resolve();
+                    }, undefined, reject);
+                });
+                await ruanganPromise;
+
+                await Promise.all([ruanganPromise]);
+            } catch (error) {
+                console.log("Error loading models : " + error);
+            }
+        }
+        loadModels();
+
+        // COLLISION
+        function playerCollisions() {
+            const result = worldOctree.capsuleIntersect(playerCollider);
+            playerOnFloor = false;
+            if (result) {
+                playerOnFloor = result.normal.y > 0;
+                if (!playerOnFloor) {
+                    playerVelocity.addScaledVector(result.normal, - result.normal.dot(playerVelocity));
+                }
+                playerCollider.translate(result.normal.multiplyScalar(result.depth));
+            }
+        }
+        // buat update player letaknya
+        function updatePlayer(deltaTime) {
+            let damping = Math.exp(- 4 * deltaTime) - 1;
+            if (!playerOnFloor) {
+                playerVelocity.y -= GRAVITY * deltaTime;
+                damping *= 0.1;
+            }
+            playerVelocity.addScaledVector(playerVelocity, damping);
+            const deltaPosition = playerVelocity.clone().multiplyScalar(deltaTime);
+            playerCollider.translate(deltaPosition);
+            playerCollisions();
+            camera.position.copy(playerCollider.end);
+        }
+        // dapetin vector arah setelah normalisasi
+        function getForwardVector() {
+            camera.getWorldDirection(playerDirection);
+            playerDirection.y = 0;
+            playerDirection.normalize();
+            return playerDirection;
+        }
+        function getSideVector() {
+            camera.getWorldDirection(playerDirection);
+            playerDirection.y = 0;
+            playerDirection.normalize();
+            playerDirection.cross(camera.up);
+            return playerDirection;
+        }
+
+        // ANIMATE
+        function animate() {
+            requestAnimationFrame(animate);
+
+            const deltaTime = Math.min(0.05, clock.getDelta()) / STEPS_PER_FRAME;
+            for (let i = 0; i < STEPS_PER_FRAME; i++) {
+                controls(deltaTime);
+                updatePlayer(deltaTime);
+            }
+
+            console.log(camera.position);
+            control.lock();
+            // -60 samep 75
+            // -50 sampe -40
+            renderer.render(scene, camera);
+        }
+
+        animate();
+    </script>
 </body>
+
 </html>
