--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
                 // load pintu
                 const pintuPromise = new Promise((resolve, reject) => {
-                    loader.load('./public/pintuTengah.glb', function (gltf) {
+                    loader.load('./public/pintuDepan.glb', function (gltf) {
                         pintuUtama = gltf.scene;
                         pintuUtama.scale.set(10, 10, 10)
                         pintuUtama.position.set(-44, 6.5, -70);
